--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: 22w
+        node-version: 22
     - name: Install Marp CLI
       run: npm install -g @marp-team/marp-cli
     - name: Build pdfs
