--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,7 @@ jobs:
       run: |
         mkdir pptxs
         find ./slides -name "*.md" -exec sh -c 'echo "marp {} -o ./pptxs/$(basename {} .md).pptx"' \;
+        ls pptxs
     - name: Upload PDF artifact
       uses: actions/upload-artifact@v4
       with:
